# SlicerFab

./: CMakeLists.txt  README.md  notes
BitmapGenerator/: BitmapGenerator.py  CMakeLists.txt
Constructor/: CMakeLists.txt  Constructor.py
ModelRasterizer/: CMakeLists.txt  ModelRasterizer.py
workflow/: 150209_bmpWorkflow.ipynb
workflow/dcm/: 00371_2.16.840.1.113669.632.21.1942305818.2958364502.25743615642045781.dcm  00372_2.16.840.1.113669.632.21.1942305818.2958364502.25911387802035761.dcm  00373_2.16.840.1.113669.632.21.1942305818.2958364502.26079159962025741.dcm  00374_2.16.840.1.113669.632.21.1942305818.2958364502.24495810202105901.dcm  00375_2.16.840.1.113669.632.21.1942305818.2958364502.24663582362095881.dcm  00376_2.16.840.1.113669.632.21.1942305818.2958364502.26173531802085861.dcm  00377_2.16.840.1.113669.632.21.1942305818.2958364502.26341303962075841.dcm  00378_2.16.840.1.113669.632.21.1942305818.2958364502.26509076122065821.dcm  00379_2.16.840.1.113669.632.21.1942305818.2958364502.26676848282055801.dcm  00380_2.16.840.1.113669.632.21.1942305818.2958364502.25502443162045781.dcm
workflow/output/: textFile.txt
